--- a/index.html
+++ b/index.html
@@ -2188,6 +2188,9 @@ editor = Agent(role="Editor")</code></pre>
                                 </div>
                             </div>
                         </div>
+                        <div class="text-lg text-red-700">
+                            <h1 ><a href="/ollama.html">Learn More - Click Here</a></h1>
+                        </div>
                     </div>
                 </section>
 
