--- a/index.html
+++ b/index.html
@@ -2104,6 +2104,7 @@ editor = Agent(role="Editor")</code></pre>
                         <p class="text-gray-600 mb-6">
                             Run powerful AI models on your own hardware without internet connection. Ollama makes it easy to deploy LLMs locally for privacy, offline operation, and complete control.
                         </p>
+                        <div class="text-lg text-blue-700"><a href="/demo.html">Example Demo App Overview</a></div>
 
                         <div id="local-ai-content" class="collapsible-content">
                             <div class="mb-8 bg-gradient-to-br from-green-50 to-emerald-50 rounded-xl p-6 border-2 border-green-200">
