--- a/index.html
+++ b/index.html
@@ -3421,8 +3421,8 @@ jobs:
                         </div>
                     </div>
                     <div class="flex flex-wrap gap-2">
-                        <a href="https://www.gartner.com/en/articles/what-s-new-in-artificial-intelligence-from-the-2023-gartner-hype-cycle" target="_blank" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition text-sm">
-                            📊 Gartner AI Hype Cycle
+                        <a href="https://www.gartner.com/en/chief-information-officer/research/ai-maturity-model-toolkit" target="_blank" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition text-sm">
+                            📊 Gartner AI Maturity
                         </a>
                     </div>
                 </div>
